--- a/public/main.html
+++ b/public/main.html
@@ -401,7 +401,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>never even</h3>
+      <h3>Never Even</h3>
       <p>(respeto por las cosas como son)</p>
       <br>
       <img class="lazyload" src="assets/img/20_never even/01.jpg" alt="Image 1">
@@ -609,9 +609,26 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
     
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Avant-Gardes or Nothing</h3>
+      <p>lorem ipsum dolor</p>
       <p>In today's architectural culture, where any affirmative position quickly crystallizes in the representation of dogmas that are repeated, perpetuating similarities, and diluting the vitality that drives them, to decline in instrumentalization as a service or take refuge in empty appearances, Avant-Gardes or Nothing pretends to reverse the current resignation, from its basic logics, with the simple operation of affirming that the spirit of the artistic avant-gardes of the beginning of the 20th century has yet to be overcome. No longer with the melancholic repetition of its images or actions by means of mechanical pantomimes, nor by evading their truncated wills, but instead, by recognizing in the current architectural trends the truncated process initiated by the avant-gardes. Through various analyzes of their manifestos, their vehement spirits are modeled and their affirmative candor is adopted to make their childish worldviews their own, in order to distinguish their most significant nuances and gradients, using their force to push them beyond their ideological presumptions. This process, which involves closely linking the texts with the form of architecture they propose, aims to shake the stage of contemporary architecture by creating new isms, not as unappealable foundations, but as engines capable of setting in motion architectures capable of overcoming the same reasons that drive them forward.</p>
       <br>
-      <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/08.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/09.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/10.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/11.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/12.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/13.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/14.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/15.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/16.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/19_vanguardias o nada/17.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
@@ -699,6 +716,8 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Hacia una Arquitectura sin Fin</h3>
+      <p>lorem ipsum dolor</p>
+      <br>
       <p>1. ¿Cuáles son las cualidades, las capacidades, las potencias que están dentro de la arquitectura que son socialmente transformadoras? <br>
 2. Mientras que la arquitectura encuentre sus fines subyugados a determinaciones externas el despliegue de una política propia estará inhibido. <br>
 3. La arquitectura, en tanto núcleo teórico que puede pensar cómo se “espacializa” el mundo está confinada a ejercitar la mera praxis de la supervivencia. <br>
@@ -719,7 +738,8 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Avenida de Mayo</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/02.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
@@ -735,8 +755,15 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Laberinto</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <!-- Add more content here if needed -->
+      <img class="lazyload" src="assets/img/17_Laberinto/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/08.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/17_Laberinto/09.jpg" alt="Image 1">
     </div>
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
