--- a/public/main.html
+++ b/public/main.html
@@ -620,23 +620,23 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <p>lorem ipsum dolor</p>
       <p>In today's architectural culture, where any affirmative position quickly crystallizes in the representation of dogmas that are repeated, perpetuating similarities, and diluting the vitality that drives them, to decline in instrumentalization as a service or take refuge in empty appearances, Avant-Gardes or Nothing pretends to reverse the current resignation, from its basic logics, with the simple operation of affirming that the spirit of the artistic avant-gardes of the beginning of the 20th century has yet to be overcome. No longer with the melancholic repetition of its images or actions by means of mechanical pantomimes, nor by evading their truncated wills, but instead, by recognizing in the current architectural trends the truncated process initiated by the avant-gardes. Through various analyzes of their manifestos, their vehement spirits are modeled and their affirmative candor is adopted to make their childish worldviews their own, in order to distinguish their most significant nuances and gradients, using their force to push them beyond their ideological presumptions. This process, which involves closely linking the texts with the form of architecture they propose, aims to shake the stage of contemporary architecture by creating new isms, not as unappealable foundations, but as engines capable of setting in motion architectures capable of overcoming the same reasons that drive them forward.</p>
       <br>
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/06.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/07.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/08.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/09.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/10.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/11.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/12.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/13.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/14.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/15.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/16.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/19_vanguardias o nada/17.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/08.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/09.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/10.JPG" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/11.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/12.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/13.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/14.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/15.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/16.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/29_vanguardias o nada/17.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -763,7 +763,10 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <h3>Avalos 2172 Fotos</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img class="lazyload" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+    <img class="lazyload" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/03_avalos 2172_fotos/04.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
