--- a/public/main.html
+++ b/public/main.html
@@ -760,6 +760,10 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <img class="lazyload" src="assets/img/34_avenida de mayo/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/04.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/05.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/08.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/09.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
