--- a/public/main.html
+++ b/public/main.html
@@ -765,7 +765,18 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
+<div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3>MothershipTheatre</h3>
+      <p>lorem ipsum dolor</p>
+      <br>
+    <img class="lazyload" src="assets/img/16_lab jesse reiser video/01.png" alt="Image 1">
+  <img class="lazyload" src="assets/img/16_lab jesse reiser video/02.png" alt="Image 1">
+      <p>Proyecto: Manuel Mensa, Maria Falivene, Mariano Galindez, Michel Hunziker, Celeste Mourad, Cloe Sierchuk, Micaela Zadravec. <br>
 
+Parte del Lab 009 de Jesse Reiser en la Escuela de Arquitectura y Estudios Urbanos de la Universidad Torcuato Di Tella.</p>
+      <!-- Add more content here if needed -->
+    </div>
+    
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Avalos 2172 Fotos</h3>
       <p>lorem ipsum dolor</p>
