--- a/public/main.html
+++ b/public/main.html
@@ -717,6 +717,27 @@ Trabajos de: Gastón Berghmans, Candela de Bortoli, Florencia Fernández Fulvey,
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
+    
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3>Agrupación Militancia Arquitectura</h3>
+      <p>lorem impsum dolor</p>
+      <br>
+      <img class="lazyload" src="assets/img/35_agrupacion militancia arquitectura/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/35_agrupacion militancia arquitectura/02.jpg" alt="Image 1">
+      <p>lorem ipsum dolor</p>
+      <!-- Add more content here if needed -->
+    </div>
+
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3>Architecture Postponed</h3>
+      <p>lorem impsum dolor</p>
+      <br>
+      <img class="lazyload" src="assets/img/36_architecture postponed/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/36_architecture postponed/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/36_architecture postponed/03.jpg" alt="Image 1">
+      <p>A competition to design the New Architecture Pavilion is hold. The competition brief says “No distractions will allow the visitors to behold Architecture” A jury of ninety five prestigious architects is conformed. Entries from all over the world are received. The jury makes a decision. There is only one winner, no second or third prizes. “One winner” shouts the jury of ninety five prestigious architects. Once the winning project is unveiled, the winning architect says: “A great white shiny box contains all the contemporary architecture”. There is one door. The New Architecture Pavilion holds a competition to decide which contemporary architecture will be contained inside. A jury of ninety five prestigious architects is conformed. “One winner” they say. Once the winning project is unveiled, the winning architect says: “A great white shiny box contains a great white shiny box that contains all the contemporary architecture”. There are two doors. A new competition to decide which is the contemporary architecture to be contained is hold. A jury of ninety five prestigious architects is conformed. “One winner” they shout. The winning architect says: “A great white shiny box contains a great white shiny box that contains a great white shiny box that contains all the contemporary architecture”. There are three doors. A new competition is hold. One winner is all there is. The winning architect says “A great white shiny box contains a great white shiny box that contains a great white shiny box that contains a great white shiny box that contains all the contemporary architecture”. There are four doors. This was repeated a total of thirteen times. There are thirteen doors. </p>
+      <!-- Add more content here if needed -->
+    </div>
 
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Avalos 2172</h3>
