--- a/public/main.html
+++ b/public/main.html
@@ -186,7 +186,7 @@ Performance lumínica: Fluxlian <br>
 Performance corporal: Sofia Kauer y Ana S. <br>
 </p>
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="estados">
       <h3>Estados de la Arquitectura</h3>
       <p>Seis Alegorías Arquitectónicas</p>
       <br>
