--- a/public/main.html
+++ b/public/main.html
@@ -48,7 +48,7 @@
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="sinestado">
       <h3>Arquitectura sin Estado</h3>
       <p>lorem ipsum dolor</p>
       <br>
@@ -78,7 +78,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cenotafios">
       <h3>Cenotafios</h3>
       <p>lorem ipsum dolor</p>
       <br>
@@ -104,7 +104,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="freesbeexrc">
       <h3>Casa Freesbee x RC</h3>
       <p>lorem ipsum dolor</p>
       <br>
@@ -116,7 +116,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="freesbeexsg">
       <h3>Casa Freesbee x SG</h3>
       <p>lorem ipsum dolor</p> 
       <br>
@@ -129,7 +129,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="cuerpo">
       <h3>El Cuerpo Hueco de la Arquitectura</h3>
       <p>lorem ipsum dolor</p>
       <br>
@@ -154,7 +154,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="muro">
       <h3>En el Muro</h3>
       <p>Arruinar una Habitación</p>
       <br>
