--- a/public/main.html
+++ b/public/main.html
@@ -423,10 +423,8 @@ Publicado en <i>Symmetry: The One and the Many (David Salomon, Archivos de Arqui
     </div>
       <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Creciendo en Público</h3>
-      <p>Newsletter Errático</p>
-    <br>
-        <p>https://creciendoenpublico.substack.com/</p> <br>
-        <br>
+      <p>Newsletter Errático</p><br>
+        <p>https://creciendoenpublico.substack.com/</p><br>
         <p>A veces tengo conversaciones tan interesantes que son como una fiesta. Después las recreo internamente, regocijándome una y otra vez, pensando en caminos alternativos, posibles desenlaces, exageraciones, enojos o alegrías inventadas. Algún tiempo después, casi como un golpe, me doy cuenta de que algo singular, ya sea un fragmento de un libro, un suéter de tres mangas, la forma en que tal canción crece hacia el éxtasis, o la mirada penetrante en un fotograma de una película, es vital para que la sensibilidad y los problemas de la conversación continúen desplegándose. Todas estas cosas singulares y las razones de su sugerencia estarán en “Creciendo en Público”, un newsletter de frecuencia errática compuesto de recomendaciones privadas hechas públicas, como cartas flotando en el océano. <br>
 Suscripción: creciendoenpublico.substack.com
 </p>
@@ -442,8 +440,8 @@ Gilles Deleuze, <br>
 Literatura y Vida<br>
 Crítica y Clínica <br> </i> 
 
-Exceso 01
-Para J.B.
+Exceso 01 <br>
+Para J.B. <br>
 En un momento J.B. dice algo sobre la moda y los artistas: “para un artista es un problema caer en la moda”. Después le digo a J.B. que <i>1.Hay algo lindo en la idea de moda (fashionista) que es dejarse arrastrar por las olas que pasan con la confianza de que la singularidad persistirá. </i> Al leer ahora lo que escribí pienso “quién puede escribir así? La palabra <i>persistirá</i> me da vergüenza”. Pero ya sé donde está el error: en vez de haber dicho eso debería haber escrito sobre el “three arm sweater” de Issey Miyake. No puedo dejar de pensar en ese sweater desde que lo vi por primera vez y cada vez que alguien dice la palabra moda, o se refiere a la moda en algún sentido, pienso en el sweater de tres brazos de Issey Miyake. Me regocijo en el momento en el que el tercer brazo da la vuelta alrededor del cuello y pierde toda su radicalidad para distribuir el exceso de tela en un manojo de <i>plisses</i>. Describir su belleza, la forma que tiene de absorber todas las convenciones (el agujero para el cuello, el agujero para cada brazo, los largos..) y con un exceso mínimo, casi como si se tratara de un error de fabricación, darlas vuelta con mucha gracia.
         </p>
         <br>
@@ -518,9 +516,8 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Tu Amorosa</h3>
-      <p>Serla</p>
-      <br>
-      <p>https://youtu.be/BlgefTsb99I</p><br>
+      <p>Serla</p> <br> 
+      <p>https://youtu.be/BlgefTsb99I</p> <br>
       <img class="lazyload" src="assets/img/27_tu amorosa/01.png" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
