--- a/public/main.html
+++ b/public/main.html
@@ -183,6 +183,13 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/37.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/38.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/39.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/40.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/41.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/42.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/43.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/44.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/45.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/46.jpg" alt="Image 1">
       <p>Fotografías: Manuel Mensa, Renée Charmichael <br>
 Edición y secuenciación: Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
