--- a/public/main.html
+++ b/public/main.html
@@ -616,8 +616,8 @@ Fragmentos de la publicación Arquitectura sin Estado: Albergar Multitudes (Arch
       <h3>MothershipTheatre</h3>
       <p>Thesis for an Opaque Architecture <br>
         <br>
-         <video autoplay poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Image 1">
-    <video autoplay poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Image 1">
+         <video autoplay poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Image 1"></video>
+    <video autoplay poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Image 1"></video>
 Thesis 01 <br>
 Modern Envelope <br>
 Modernism compresses everything in its envelope in order to achieve transparency. Materials and material systems represents ideal truth (limpid, pure, smooth, simple, condensed, almost invisible) becoming almost transparent itself, thus allowing transparency of the interior that encloses (the lack of an interior, the interior as spectacle).<br>
