--- a/public/main.html
+++ b/public/main.html
@@ -236,7 +236,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Creciendo en Público</h3>
       <p>Newsletter Errático</p><br>
-        <p>https://creciendoenpublico.substack.com/</p><br>
+        <a>https://creciendoenpublico.substack.com/</a><br>
         <p>A veces tengo conversaciones tan interesantes que son como una fiesta. Después las recreo internamente, regocijándome una y otra vez, pensando en caminos alternativos, posibles desenlaces, exageraciones, enojos o alegrías inventadas. Algún tiempo después, casi como un golpe, me doy cuenta de que algo singular, ya sea un fragmento de un libro, un suéter de tres mangas, la forma en que tal canción crece hacia el éxtasis, o la mirada penetrante en un fotograma de una película, es vital para que la sensibilidad y los problemas de la conversación continúen desplegándose. Todas estas cosas singulares y las razones de su sugerencia estarán en “Creciendo en Público”, un newsletter de frecuencia errática compuesto de recomendaciones privadas hechas públicas, como cartas flotando en el océano. <br>
 Suscripción: creciendoenpublico.substack.com
 </p>
@@ -616,8 +616,8 @@ Fragmentos de la publicación Arquitectura sin Estado: Albergar Multitudes (Arch
       <h3>MothershipTheatre</h3>
       <p>Thesis for an Opaque Architecture <br>
         <br>
-         <video autoplay poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Image 1"></video>
-    <video autoplay poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Image 1"></video>
+         <video autoplay muted poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Image 1"></video>
+    <video autoplay muted poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Image 1"></video>
 Thesis 01 <br>
 Modern Envelope <br>
 Modernism compresses everything in its envelope in order to achieve transparency. Materials and material systems represents ideal truth (limpid, pure, smooth, simple, condensed, almost invisible) becoming almost transparent itself, thus allowing transparency of the interior that encloses (the lack of an interior, the interior as spectacle).<br>
