--- a/public/main.html
+++ b/public/main.html
@@ -216,7 +216,8 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <p>Planos</p>
       <br>
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/04.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -446,18 +447,17 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
       <br>
       <img class="lazyload" src="assets/img/34_avenida de mayo/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/02.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/34_avenida de mayo/03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/34_avenida de mayo/04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/34_avenida de mayo/05.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/34_avenida de mayo/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/09.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/08.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/34_avenida de mayo/09.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/10.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/34_avenida de mayo/11.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>Erewhon</h3>
+      <h3>Stagger</h3>
       <p>Escaleras y Arcos</p>
       <br>
       <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
