--- a/public/main.html
+++ b/public/main.html
@@ -237,9 +237,9 @@ Edición y secuenciación: Catalina Sfer Salas</p>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Creciendo en Público</h3>
       <p>Newsletter Errático</p><br>
-        <a>https://creciendoenpublico.substack.com/</a><br>
+        <a href="https://creciendoenpublico.substack.com/">https://creciendoenpublico.substack.com/</a><br>
         <p>A veces tengo conversaciones tan interesantes que son como una fiesta. Después las recreo internamente, regocijándome una y otra vez, pensando en caminos alternativos, posibles desenlaces, exageraciones, enojos o alegrías inventadas. Algún tiempo después, casi como un golpe, me doy cuenta de que algo singular, ya sea un fragmento de un libro, un suéter de tres mangas, la forma en que tal canción crece hacia el éxtasis, o la mirada penetrante en un fotograma de una película, es vital para que la sensibilidad y los problemas de la conversación continúen desplegándose. Todas estas cosas singulares y las razones de su sugerencia estarán en “Creciendo en Público”, un newsletter de frecuencia errática compuesto de recomendaciones privadas hechas públicas, como cartas flotando en el océano. <br>
-Suscripción: creciendoenpublico.substack.com
+Suscripción: <a href="creciendoenpublico.substack.com">creciendoenpublico.substack.com</a>
 </p>
          <br>
         <p>Vanguardistas 01 <br>
@@ -366,8 +366,8 @@ Gilles Deleuze <br> </i>
  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Tu Amorosa</h3>
       <p>Serla</p> <br> 
-      <iframe width="100%"
-      src="https://youtu.be/BlgefTsb99I">
+      <iframe width="100%" autoplay
+      src="https://www.youtube.com/embed/BlgefTsb99I">
       </iframe>
       <br>
       <img class="lazyload" src="assets/img/27_tu amorosa/01.png" alt="Image 1">
