--- a/public/main.html
+++ b/public/main.html
@@ -366,7 +366,7 @@ Gilles Deleuze <br> </i>
  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Tu Amorosa</h3>
       <p>Serla</p> <br> 
-      <iframe width="100%" autoplay
+      <iframe width="100%" frameborder="0" autoplay;
       src="https://www.youtube.com/embed/BlgefTsb99I">
       </iframe>
       <br>
@@ -619,8 +619,8 @@ Fragmentos de la publicación Arquitectura sin Estado: Albergar Multitudes (Arch
       <h3>MothershipTheatre</h3>
       <p>Thesis for an Opaque Architecture <br>
         <br>
-    <video autoplay loop poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Video 1"></video>
-    <video autoplay loop poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Video 2"></video>
+    <video autoplay muted="muted" loop poster="assets/img/16_lab jesse reiser video/01.png" src="assets/img/16_lab jesse reiser video/01.mp4" alt="Video 1"></video>
+    <video autoplay muted="muted" loop poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Video 2"></video>
 Thesis 01 <br>
 Modern Envelope <br>
 Modernism compresses everything in its envelope in order to achieve transparency. Materials and material systems represents ideal truth (limpid, pure, smooth, simple, condensed, almost invisible) becoming almost transparent itself, thus allowing transparency of the interior that encloses (the lack of an interior, the interior as spectacle).<br>
