--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     <!-- Function to check the password. The already set password is "admin" -->
     <script type="text/javascript">
         function checkPswd() {
-            var confirmPassword = "admin";
+            var confirmPassword = "amenabar";
             var password = document.getElementById("pswd").value;
             if (password == confirmPassword) {
                 window.location = "main.html";
