--- a/public/main.html
+++ b/public/main.html
@@ -43,7 +43,7 @@
 <body>
   <button id="slideBack" type="button" class="arrow-button-l" onmousedown="startScrollLeft()" onmouseup="stopScrollLeft()" onmouseleave="stopScrollLeft()"></button>
   <div class="container">
-    <div class="column1" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
       <p>Arquitectura</p>
       <p></p>
