--- a/public/main.html
+++ b/public/main.html
@@ -120,6 +120,12 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <h3>Casa J.B.R.C.</h3>
       <p>Planos</p>
       <br>
+      <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “la casa tiene mucho ruido, hace falta mucha crueldad. Como decía L. Lamborghini sobre la palabra amor, hay que retorcerla”. El proceso de reconstrucción de la casa empezó siendo una “lavada de cara”, siguió como una “refacccion”, se volvió luego una “reforma integral” y culminó en la sensación de “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la casa ya era: un triplex de ancho 3 metros por un largo de 18 metros generaba la sensación de un pequeño buque. 
+
+<br>Circulación vertical. 
+<br>Espacios separados
+<br>Las cosas como flotando
+</p>
       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/01.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/02.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/03.jpg" alt="Image 1">
