--- a/public/main.html
+++ b/public/main.html
@@ -372,7 +372,7 @@ Gilles Deleuze <br> </i>
    
  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Tu Amorosa</h3>
-      <p>Serla</p> <br> 
+      <p>Serla</p> 
       <br>
    <p>Capítulo Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/01.png" alt="Image 1"></a><br>
