--- a/public/main.html
+++ b/public/main.html
@@ -993,6 +993,9 @@ Argentina (2014), Archizines en Victoria y Albert Museum en Londres (2015), Symm
 Many (Archivos de Arquitectura, 2018), Superdigitalismo (Notas CPAU, 2019), Singularidades: Teoría
 Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquitectura Genérico Sublime
 (Archivos de Arquitectura, 2022).</p>
+       <br>
+       <br>
+       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik, Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
     </div>
     
