--- a/public/main.html
+++ b/public/main.html
@@ -1005,8 +1005,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
       <p>Multicolumna</p>
       <br>
       <img class="lazyload" src="assets/img/37_website multicolumna/01.jpg" alt="Image 1">
-      <p>Proyecto, curaduría y ejecución: Manuel Mensa, Catalina Sfer Salas
-      <br>Diseño web: Nicolás Boscoboinik </p>
+      <p>Proyecto, curaduría y ejecución: Manuel Mensa, Catalina Sfer Salas, Nicolás Boscoboinik </p>
       <!-- Add more content here if needed -->
     </div>
         
