--- a/public/main.html
+++ b/public/main.html
@@ -139,6 +139,8 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/04.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/05.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/08.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
