--- a/public/main.html
+++ b/public/main.html
@@ -496,10 +496,14 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
       <h3>Casa F.K.L.</h3>
       <p>Avenida de Mayo, Buenos Aires</p>
   <br>
+  
       <img class="lazyload" src="assets/img/34_avenida de mayo/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/02.jpg" alt="Image 1">
+  <video autoplay muted="muted" loop poster="assets/img/34_avenida de mayo/03.png" src="assets/img/34_avenida de mayo/03.mp4" alt="Video 1"></video>
       <img class="lazyload" src="assets/img/34_avenida de mayo/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/08.jpg" alt="Image 1">
+  <img class="lazyload" src="assets/img/34_avenida de mayo/06.jpg" alt="Image 1">
+  <img class="lazyload" src="assets/img/34_avenida de mayo/09.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/10.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/34_avenida de mayo/11.jpg" alt="Image 1">
       <p>lorem ipsum dolor</p>
